argocd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mybox
spec:
  replicas: 1
  selector:
    matchLabels:
      run: mybox
  template:
    metadata:
      labels:
        run: mybox
    spec:
      containers:
        - image: 679117170907.dkr.ecr.ap-northeast-2.amazonaws.com/mybox:latest
          name: mybox
          ports:
            - containerPort: 80
