argocd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mybox
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 80
  type: LoadBalancer
  selector:
    run: mybox
