argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-board
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-0b73f61f8e424d162, subnet-036d7487f0beb8e80
spec:
  defaultBackend:
    service:
      name: board
      port:
        number: 80
  rules:
    - host:
      http:
        paths:
          - path: /board
            pathType: Prefix
            backend:
              service:
                name: board
                port:
                  number: 80
